Better "catalogue" loading UI
When I launch Software, sometimes it seems to load all app data before it can show anything. The UI that's shown while it's loading isn't very smooth and feels quite clunky. I took a screencast of this yesterday which shows what's happening. You can break it down into the following stages:
1. Icon and progress bar, "downloading"
2. Icon and progress bar, "loading"
3. UI appears, some graphics missing
4. More graphics filled in
5. More graphics filled in
Issues
Issues that you can see in this process:
- Does it have to reload all the data so frequently? (I suspect not.)
- The progress bar in steps 1 and 2 never moves.
- The switch between "downloading" and "loading" messages seems unnecessary.
- At step 3, when the UI appears, there's a momentary jiggling - it looks like the UI rapidly bounces around as it's laid out.
- The transitions as the UI and the graphics appear are all very abrupt.
- The timing and order of when each element appears feels awkward - the section at the bottom appears first, then there's a pause, then the others appear in close succession. It feels a bit startling.
- It's uncomfortable having headings that refer to content that isn't there. It's like it's teasing you, and you start to try and make sense of the UI before it's understandable.
- Between step 3 and 4 all the UI moves down. I think that this is because the featured applications placeholder isn't as big as the content that's shown when it's loaded.
- I think there's something up with the icon that's used to indicate loading progress - it adds to the noise and maybe isn't easily recognisable.
I can provide some design guidance for this, but it might not be for a week or two.