Don't switch away from the loading page until the overview page is fully loaded

Keep showing the loading page and only switch to the overview page when
we know that the content has been fully loaded. This avoids visible
jiggling while the UI is being loaded and laid out.

Fixes: https://gitlab.gnome.org/GNOME/gnome-software/issues/612